mdapi/Custom/objects/Property_Opportunity__c.object
<CustomObject>
    <description>This is part of the Acquisitions deployment.  This object captures properties that have been placed into escrow and where the Approval process occurs that facilitates reporting and creation of Portfolio.</description>
    <fields>
        <fullName>AC_or_Evap__c</fullName>
        <formula>TEXT(Residence__r.AC_or_Evap__c)</formula>
        <label>AC or Evap</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APN__c</fullName>
        <formula>Residence__r.APN__c</formula>
        <label>*APN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Back_Taxes_Due__c</fullName>
        <formula>AZB_Update__r.AZB_Back_Taxes_Due__c</formula>
        <label>AZB Back Taxes Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Bid_Cancelled_Date__c</fullName>
        <formula>AZB_Update__r.AZB_Bid_Cancelled_Date__c</formula>
        <label>AZB Bid Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AZB_Bid_Status__c</fullName>
        <formula>TEXT(AZB_Update__r.AZB_Bid_Status__c)</formula>
        <label>AZB Bid Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Bid_Type__c</fullName>
        <formula>AZB_Update__r.AZB_Bid_Type__c</formula>
        <label>AZB Bid Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Drive_Report_Notes__c</fullName>
        <label>AZB Drive Report Notes</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AZB_ID__c</fullName>
        <formula>AZB_Update__r.AZB_ID__c</formula>
        <label>AZB ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_IH_Final_Max_Bid__c</fullName>
        <formula>AZB_Update__r.AZB_IH_Final_Max_Bid__c</formula>
        <label>AZB IH Final Max Bid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_IH_Original_Bid_Max__c</fullName>
        <formula>AZB_Update__r.AZB_IH_Original_Bid_Max__c</formula>
        <label>AZB IH Original Bid Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_IH_Win_Date__c</fullName>
        <formula>AZB_Update__r.AZB_IH_Win_Date__c</formula>
        <label>AZB IH Win Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AZB_Occupied_Status__c</fullName>
        <formula>AZB_Update__r.AZB_Occupied_Status__c</formula>
        <label>AZB Occupied Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Open_Bid__c</fullName>
        <formula>AZB_Update__r.AZB_Open_Bid__c</formula>
        <label>AZB Open Bid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Place__c</fullName>
        <formula>AZB_Update__r.AZB_Place__c</formula>
        <label>AZB Place</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Assessor_Value__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Assessor_Value__c</formula>
        <label>AZB Property Assessor Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Est_Value__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Est_Value__c</formula>
        <label>AZB Property Est Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Levels__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Levels__c</formula>
        <label>AZB Property Levels</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Pool__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Pool__c</formula>
        <label>AZB Property Pool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Subdivision__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Subdivision__c</formula>
        <label>AZB Property Subdivision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Property_Use_Code__c</fullName>
        <formula>AZB_Update__r.AZB_Property_Use_Code__c</formula>
        <label>AZB Property Use Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Trustee_Date_Final_Pmt__c</fullName>
        <formula>AZB_Update__r.AZB_Trustee_Date_Final_Pmt__c</formula>
        <label>AZB Trustee Date Final Pmt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AZB_Trustee_Deposit_Pmt__c</fullName>
        <formula>AZB_Update__r.AZB_Trustee_Deposit_Pmt__c</formula>
        <label>AZB Trustee Deposit Pmt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Trustee_Final_Pmt__c</fullName>
        <formula>AZB_Update__r.AZB_Trustee_Final_Pmt__c</formula>
        <label>AZB Trustee Final Pmt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AZB_Trustee_Number__c</fullName>
        <formula>AZB_Update__r.AZB_Trustee_Number__c</formula>
        <label>AZB Trustee Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Trustee_Sale_Date__c</fullName>
        <formula>AZB_Update__r.AZB_Trustee_Sale_Date__c</formula>
        <label>AZB Trustee Sale Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AZB_Trustee_Sale_Time__c</fullName>
        <formula>AZB_Update__r.AZB_Trustee_Sale_Time__c</formula>
        <label>AZB Trustee Sale Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Underwriting_Notes__c</fullName>
        <label>AZB Underwriting Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AZB_Update__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AZB Update</label>
        <referenceTo>AZB_Update__c</referenceTo>
        <relationshipLabel>Pipeline</relationshipLabel>
        <relationshipName>Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AZB_User_Email__c</fullName>
        <formula>AZB_Update__r.AZB_User_Email__c</formula>
        <label>AZB User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_User_ID__c</fullName>
        <formula>AZB_Update__r.AZB_User_ID__c</formula>
        <label>AZB User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_User__c</fullName>
        <formula>AZB_Update__r.AZB_User__c</formula>
        <label>AZB User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AZB_Winning_Bid_Amount__c</fullName>
        <formula>AZB_Update__r.AZB_Winning_Bid_Amount__c</formula>
        <label>AZB Winning Bid Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Basis_Est_UW__c</fullName>
        <formula>IF(
AND(
ISNULL(Broker_Expense_Est_UW__c),
ISNULL(Closing_Price__c),
ISNULL(Rehab_Budget_Est_UW__c),
ISNULL(Back_Taxes_Est_UW__c),
ISNULL( Bid_Service_Expense__c),
ISNULL(Liens_Fines_Est_UW__c)
),
null,
(
IF(Bid_Service_Expense__c&gt; 0, Bid_Service_Expense__c, 0)
+
IF(Broker_Expense_Est_UW__c&gt; 0, Broker_Expense_Est_UW__c, 0)
+
IF(Closing_Price__c &gt; 0, Closing_Price__c, 0)
+
IF(Rehab_Budget_Est_UW__c &gt; 0, Rehab_Budget_Est_UW__c, 0) +
+
IF(Back_Taxes_Est_UW__c &gt; 0, Back_Taxes_Est_UW__c, 0) +
+
IF(Liens_Fines_Est_UW__c &gt; 0, Liens_Fines_Est_UW__c, 0)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Basis Est @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Basis_PSF_Est_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
Acquisition_Basis_Est_UW__c / Square_Feet__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Basis PSF Est @ UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>*Closing/Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquisition_Overhead__c</fullName>
        <description>Effective July 2014, Asset Mgmt. began rolling Acquisition Overhead, Initial Lease-Up Costs, and Rehab Overhead into Platform Build-Up Costs.  Therefore, all values in this field were changed to 0.00.  Refer to D-00013010 and its attached spreadsheet.</description>
        <formula>If(NOT(ISNULL(Acquisition_Basis_Est_UW__c)), 
(Acquisition_Basis_Est_UW__c + Title_Policy_Cost_Est_UW__c + Other_Closing_Costs_Est_UW__c + Initial_Lease_up_Cost_Est_UW__c + CFK_Est_UW__c)
* (CASE (Fund__c, &apos;01&apos;, 0.0000,&apos;02&apos;, 0.0000, &apos;03&apos;, 0.0000, &apos;04&apos;, 0.0000, 0.0000)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Overhead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price_Discount_to_Max_Bid__c</fullName>
        <formula>IF(Max_Bid_Price__c &gt; 0, 1-(Closing_Price__c/Max_Bid_Price__c), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Price Discount to Max Bid</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price_PSF__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
  Closing_Price__c /Square_Feet__c,
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Price PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Price_prct_Market_Value_UW__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0,
Closing_Price__c / Market_Value_UW__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Price as % Market Value@UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Acquisition_Reporting_Date__c</fullName>
        <label>Date Submitted to Asset Management</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquisition_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bidding Statistics #</label>
        <referenceTo>Bidding_Statistics__c</referenceTo>
        <relationshipLabel>Pipeline</relationshipLabel>
        <relationshipName>Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisitions_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisitions Analyst</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>User.Region__c</field>
                <operation>equals</operation>
                <valueField>$Source.Region__c</valueField>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Analysis</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Analysis Manager</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisitions_Team_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisitions Team Manager</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 3) AND 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Analysis Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Region__c</field>
                <operation>equals</operation>
                <valueField>$Source.Region__c</valueField>
            </filterItems>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Invitation Acquisition Analysis</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Assumption_MKT_UW__c</fullName>
        <formula>IF(Market_Value_UW__c&gt; 0,
All_In_Cost_Est_UW__c / Market_Value_UW__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost Assumption % MKT @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Assumption_prcnt_peak_UW__c</fullName>
        <formula>IF(Previous_High_Value__c &gt; 0,
All_In_Cost_Est_UW__c /Previous_High_Value__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost Assumption @ % of peak</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Assumption_replace_UW__c</fullName>
        <formula>IF(Replacement_Cost_Est_UW_OLD__c &gt; 0,
All_In_Cost_Est_UW__c / Replacement_Cost_Est_UW_OLD__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost Assumption @ UW Replace</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_Est_UW__c</fullName>
        <label>All-In Cost Est. @ Underwriting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>All_In_Cost_PSF_Est_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
All_In_Cost_Est_UW__c / Square_Feet__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All-In Cost PSF Est. @ Underwriting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amortization_Years__c</fullName>
        <label>Amortization (Years)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Comment__c</fullName>
        <label>Approval Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved_from_Acquisition_Team_Manager__c</fullName>
        <label>Approved from Acquisition Team Manager</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_from_Asset_Management_Team__c</fullName>
        <label>Approved from Asset Management Team</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Atlanta_Auction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a temp field only for the Atlanta team to use for Super Tuesday.</inlineHelpText>
        <label>Atlanta Auction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BX_All_In_Cost_Est_Disc_to_Market_UW__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0, 
1 - All_In_Cost_Est_UW__c / Market_Value_UW__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BX All-In Cost Est. Disc. to Market @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BX_Purchase_Price_Disc_to_Market_UW__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0, 
1 -   Closing_Price__c  / Market_Value_UW__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BX Purchase Price Disc. to Market @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BX_Purchase_Price_Discount_to_Peak_UW__c</fullName>
        <formula>IF(Previous_High_Value__c &gt; 0, 
1 -   Closing_Price__c  / Previous_High_Value__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BX Purchase Price Discount to Peak @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BX_Purchase_Price_Discount_to_Repl_UW__c</fullName>
        <formula>IF(Replacement_Cost_Est_UW_OLD__c &gt; 0, 
1 -    Closing_Price__c  / Replacement_Cost_Est_UW_OLD__c, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BX Purchase Price Discount to Repl. @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>B_Back_Taxes_Est__c</fullName>
        <formula>Prospect__r.B_Back_Taxes_Est__c</formula>
        <label>B Back Taxes Due ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Bid_Type__c</fullName>
        <formula>TEXT(Prospect__r.B_Bid_Type__c)</formula>
        <label>B Offer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_IH_Point_of_Contact__c</fullName>
        <formula>Prospect__r.B_IH_Point_of_Contact__c</formula>
        <label>B IH Point of Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Market_Value_Est__c</fullName>
        <formula>Prospect__r.B_Market_Value_Est__c</formula>
        <label>B Market Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Monthly_Rent_Est__c</fullName>
        <formula>Prospect__r.B_Monthly_Rent_Est__c</formula>
        <label>B Monthly Rent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Occupancy_Status__c</fullName>
        <formula>TEXT(Prospect__r.B_Occupancy_Status__c)</formula>
        <label>B Occupancy Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Other_Closing_Costs_Est__c</fullName>
        <formula>Prospect__r.B_Other_Closing_Costs_Est__c</formula>
        <label>B Other Closing Costs ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Previous_High_Date__c</fullName>
        <formula>Prospect__r.B_Previous_High_Date__c</formula>
        <label>B Previous High Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B_Previous_High_Value__c</fullName>
        <formula>Prospect__r.B_Previous_High_Value__c</formula>
        <label>B Previous High Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Property_Access__c</fullName>
        <formula>Prospect__r.B_Property_Access__c</formula>
        <label>B How to access Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Property_Description_Old__c</fullName>
        <formula>Prospect__r.B_Property_Description__c</formula>
        <label>B Property Description Old</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Property_Description__c</fullName>
        <label>B Property Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B_Rehab_Est__c</fullName>
        <formula>Prospect__r.B_Rehab_Est__c</formula>
        <label>B Rehab</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Replacement_Cost_PSF__c</fullName>
        <formula>Prospect__r.B_Replacement_Cost_PSF__c</formula>
        <label>B Replacement Cost PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>B_Status__c</fullName>
        <formula>TEXT(Prospect__r.B_Status__c)</formula>
        <label>B Transaction Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Title_Company__c</fullName>
        <formula>Prospect__r.B_Title_Company__c</formula>
        <label>B Title Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_Title_Policy_Est__c</fullName>
        <formula>Prospect__r.B_Title_Policy_Est__c</formula>
        <label>B Title Policy($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Back_Taxes_Due__c</fullName>
        <label>Back Taxes Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Back_Taxes_Est_UW__c</fullName>
        <label>*Back Taxes Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baths__c</fullName>
        <formula>Residence__r.Baths__c</formula>
        <label>*Baths</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bedrooms__c</fullName>
        <formula>Residence__r.Bedrooms__c</formula>
        <label>*Bedrooms</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bid_Service_Expense_Est_UW__c</fullName>
        <formula>Bid_Service_Expense__c</formula>
        <label>Bid Service Expense Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Service_Expense__c</fullName>
        <label>*Bid Service (Expense)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Service_Form_of_Payment__c</fullName>
        <label>Bid Service Form of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Wire</fullName>
                </value>
                <value>
                    <fullName>Cashier&apos;s Check</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Service</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pipeline (Bid Service)</relationshipLabel>
        <relationshipName>BidServicePipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Type_Sub__c</fullName>
        <label>Bid Type Sub</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Bid_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Sale - Homeowner</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Investor</fullName>
                </value>
                <value>
                    <fullName>Retail Auction</fullName>
                </value>
                <value>
                    <fullName>Off Market</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Type__c</fullName>
        <label>*Bid Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Trustee</fullName>
                    <color>#F3D904</color>
                    <label>Trustee</label>
                </value>
                <value>
                    <fullName>REO</fullName>
                    <color>#78C953</color>
                    <label>REO</label>
                </value>
                <value>
                    <fullName>Bulk Sale</fullName>
                    <color>#993399</color>
                    <label>Bulk Sale</label>
                </value>
                <value>
                    <fullName>Short Sale</fullName>
                    <color>#E27001</color>
                    <label>Short Sale</label>
                </value>
                <value>
                    <fullName>Off Market</fullName>
                </value>
                <value>
                    <fullName>Retail Auction</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Investor</fullName>
                </value>
                <value>
                    <fullName>Standard Sale - Homeowner</fullName>
                </value>
                <value>
                    <fullName>Standard Sale</fullName>
                    <color>#CC0000</color>
                    <label>Standard Sale</label>
                </value>
                <value>
                    <fullName>New Build</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Box_Folder_Id__c</fullName>
        <label>Box Folder Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bridge_Cost_during_Rehab_and_Lease_up__c</fullName>
        <formula>If(NOT(ISNULL(Acquisition_Basis_Est_UW__c)), 
(Acquisition_Basis_Est_UW__c + Title_Policy_Cost_Est_UW__c + Other_Closing_Costs_Est_UW__c + Initial_Lease_up_Cost_Est_UW__c + CFK_Est_UW__c)
*0, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bridge Cost during Rehab and Lease up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Expense_Est_UW__c</fullName>
        <defaultValue>0</defaultValue>
        <label>*Broker Expense Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Broker_Point_of_Contact__c</fullName>
        <label>IH Contact for Broker</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Broker_SF_com_Record_ID__c</fullName>
        <formula>Brokerage__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Broker SF.com Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pipeline Related to this Broker</relationshipLabel>
        <relationshipName>Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Walk_Status__c</fullName>
        <formula>IF( OR( ISNULL(HD_Budget_Walk__c), ISBLANK(TRIM(HD_Budget_Walk__c)) ), &apos;&apos;, HD_Budget_Walk__r.Budget_Status__c)</formula>
        <label>Budget Walk Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Deal_Ranking__c</fullName>
        <inlineHelpText>&quot;1&quot; means the property fits current Bulk Deal acquisition criteria; &quot;2&quot; means it does not meet current criteria but it is manageable; &quot;3&quot; means the property will be sold after purchase.</inlineHelpText>
        <label>Bulk Deal Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bulk_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Deal</label>
        <referenceTo>Bulk_Sale__c</referenceTo>
        <relationshipLabel>Pipeline Records</relationshipLabel>
        <relationshipName>Pipeline</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulk_Portfolio_ID__c</fullName>
        <label>Bulk Portfolio ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Portfolio_Prop_Count__c</fullName>
        <label>Bulk Portfolio Prop Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bulk_Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Seller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pipeline-Bulk Seller</relationshipLabel>
        <relationshipName>Pipeline_Bulk_Seller</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CFK_Est_UW__c</fullName>
        <label>*CFK Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COE_File_No__c</fullName>
        <inlineHelpText>This field is used in a formula field called &quot;Wire Reference No.&quot; on Wire Requests.</inlineHelpText>
        <label>COE File No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closing_Price__c</fullName>
        <formula>Contract_Price__c + Credits_at_Close__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closing Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comps__c</fullName>
        <label>Comps</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condition_of_Roof__c</fullName>
        <label>Condition of Roof</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Price__c</fullName>
        <label>*Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credits_at_Close_Notes__c</fullName>
        <label>Credits at Close Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Credits_at_Close__c</fullName>
        <inlineHelpText>Credits at close in lieu of purchase price reduction only. Enter as a negative number.</inlineHelpText>
        <label>Credits at Close</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Insurance_Inspection__c</fullName>
        <formula>Residence__r.Date_Submitted_for_Insurance_Inspection__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Date Submitted for Insurance Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Insurance_Inspection__c</fullName>
        <formula>Residence__r.Date_of_Insurance_Inspection__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Date of Insurance Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Payment__c</fullName>
        <label>Date of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Escrow_Open__c</fullName>
        <formula>IF (ISPICKVAL(Stage__c , &quot;Active - In Escrow&quot;) , TODAY()-Escrow_Opened_Date__c  , NULL)</formula>
        <label>Days Since Escrow Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delayed_Closing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delayed Closing</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>